--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "better-git",
+  "name": "git-sage",
   "private": true,
   "version": "0.0.0",
   "type": "module",
@@ -14,6 +14,7 @@
     "@chakra-ui/theme-tools": "^2.2.6",
     "@emotion/react": "^11.14.0",
     "@emotion/styled": "^11.14.1",
+    "diff": "^8.0.2",
     "framer-motion": "^12.23.24",
     "react": "^19.1.1",
     "react-dom": "^19.1.1",
