--- a/package.json
+++ b/package.json
@@ -12,6 +12,20 @@
   "dependencies": {
     "@chakra-ui/react": "^2.10.9",
     "@chakra-ui/theme-tools": "^2.2.6",
+    "@codemirror/commands": "^6.10.0",
+    "@codemirror/lang-cpp": "^6.0.3",
+    "@codemirror/lang-css": "^6.3.1",
+    "@codemirror/lang-html": "^6.4.11",
+    "@codemirror/lang-java": "^6.0.2",
+    "@codemirror/lang-javascript": "^6.2.4",
+    "@codemirror/lang-json": "^6.0.2",
+    "@codemirror/lang-markdown": "^6.5.0",
+    "@codemirror/lang-python": "^6.2.1",
+    "@codemirror/lang-sql": "^6.10.0",
+    "@codemirror/lang-yaml": "^6.1.2",
+    "@codemirror/state": "^6.5.2",
+    "@codemirror/theme-one-dark": "^6.1.3",
+    "@codemirror/view": "^6.38.8",
     "@emotion/react": "^11.14.0",
     "@emotion/styled": "^11.14.1",
     "diff": "^8.0.2",
